<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/zariPurple"
    tools:context=".signup_buyer">

    <ImageView
        android:id="@+id/bsup"
        android:layout_width="226dp"
        android:layout_height="150dp"

        android:layout_marginTop="16dp"
        android:foregroundGravity="center"
        android:src="@drawable/logopurplebg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/bsuname"
        android:layout_width="275dp"
        android:layout_height="54dp"

        android:backgroundTint="@color/white"
        android:foregroundGravity="center"
        android:gravity="center"
        android:hint="@string/buyername"
        android:padding="16dp"

        android:textColor="@color/white"

        android:textColorHint="@color/white"

        android:textColorLink="@color/white"
        android:textSize="22sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bsup" />

    <EditText
        android:id="@+id/bsuemail"
        android:layout_width="275dp"
        android:layout_height="54dp"

        android:layout_marginTop="12dp"

        android:backgroundTint="@color/white"
        android:foregroundGravity="center"
        android:gravity="center"
        android:hint="@string/buyeremail"
        android:padding="16dp"

        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        android:textSize="22sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bsuname" />

    <EditText
        android:id="@+id/bsupass"
        android:layout_width="275dp"
        android:layout_height="54dp"

        android:layout_marginTop="12dp"

        android:backgroundTint="@color/white"
        android:foregroundGravity="center"
        android:gravity="center"
        android:hint="@string/buyerpassword"
        android:padding="16dp"

        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        android:textSize="22sp"
        android:inputType="textPassword"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bsuemail" />

    <EditText
        android:id="@+id/bsuconfirmpass"
        android:layout_width="275dp"
        android:layout_height="54dp"

        android:layout_marginTop="12dp"
        android:backgroundTint="@color/white"
        android:foregroundGravity="center"
        android:gravity="center"
        android:hint="@string/buyerconfirmpass"

        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"

        android:textSize="22sp"

        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bsupass" />

    <Button
        android:id="@+id/buyerdob"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/zariPurple"

        android:layout_marginTop="12dp"
        android:text="@string/buyerDOB"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:shadowColor="@color/fade_white"

        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bsuconfirmpass" />

    <TextView
        android:id="@+id/buyergender"
        android:layout_width="92dp"
        android:layout_height="53dp"

        android:layout_marginTop="16dp"


        android:text="@string/buyergender"
        android:textColor="@color/fade_white"
        android:textSize="22sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.279"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buyerdob" />

    <RadioGroup
        android:id="@+id/gendergroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/buyergender"
        app:layout_constraintTop_toBottomOf="@id/buyerdob">

        <RadioButton
            android:id="@+id/buyerf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"

            android:buttonTint="@color/white"
            android:text="@string/buyerfemale"
            android:textColor="@color/white"

            android:textSize="15sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.122"
            app:layout_constraintStart_toEndOf="@+id/buyergender"
            app:layout_constraintTop_toBottomOf="@+id/buyerdob" />

        <RadioButton
            android:id="@+id/buyerm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"

            android:buttonTint="@color/white"

            android:text="@string/buyermale"
            android:textColor="@color/white"

            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.262"
            app:layout_constraintStart_toEndOf="@+id/buyerf"
            app:layout_constraintTop_toBottomOf="@+id/buyerdob" />

        <RadioButton
            android:id="@+id/buyero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"

            android:buttonTint="@color/white"
            android:text="@string/buyerother"
            android:textColor="@color/white"

            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.529"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buyerf" />


    </RadioGroup>

    <Button
        android:id="@+id/buyersu"
        android:layout_width="154dp"
        android:layout_height="49dp"

        android:layout_marginBottom="40dp"
        android:background="@drawable/round_btn"

        android:text="@string/buyerregister"


        android:textColor="@color/zariPurple"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>