<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/fade_white"
    tools:context=".signinSeller">

    <ImageView
        android:id="@+id/sellersigninimage"
        android:layout_width="234dp"
        android:layout_height="149dp"

        android:layout_marginTop="100dp"
        android:foregroundGravity="center"
        android:src="@drawable/shop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ssemailid"
        android:layout_width="312dp"
        android:layout_height="55dp"

        android:layout_marginTop="56dp"
        android:backgroundTint="@color/zariPurple"
        android:gravity="center"
        android:padding="16dp"
        android:hint="@string/selleremail"
        android:textColor="@color/zariPurple"
        android:textColorHint="@color/zariPurple"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sellersigninimage" />

    <EditText
        android:id="@+id/sspassword"
        android:layout_width="312dp"
        android:layout_height="55dp"

        android:layout_marginTop="24dp"
        android:backgroundTint="@color/zariPurple"
        android:gravity="center"
        android:padding="16dp"
        android:hint="@string/sellerpassword"
        android:inputType="textPassword"
        android:textColor="@color/zariPurple"
        android:textColorHint="@color/zariPurple"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ssemailid" />

    <Button
        android:id="@+id/sssignin"
        android:layout_width="154dp"
        android:layout_height="54dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/roundbtnpurple"
        android:onClick="@openSellerActivity"
        android:text="@string/sellersignin"
        android:textColor="@color/fade_white"
        android:textColorLink="@color/fade_white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sspassword" />

    <TextView
        android:id="@+id/sredirectsignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/sellersignup"
        android:textColor="@color/zariPurple"
        android:textColorLink="@color/zariPurple"
        android:textSize="18sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sssignin"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>